--- a/css/index.css
+++ b/css/index.css
@@ -206,7 +206,7 @@ body {
 }
 
 .wrapBox {
-  width: 1920px;
+  width: 100%;
   height: 350px;
   position: relative;
   overflow: hidden;
@@ -294,4 +294,47 @@ body {
   top: 10px;
   color: #ed145b;
   bottom: 5px;
+}
+
+.goodsList {
+  margin-top: 20px;
+}
+
+.goodsList ul li {
+  width: 329px;
+  height: 450px;
+  background-color: #fff;
+  float: left;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+
+.goodsList img {
+  width: 329px;
+}
+
+.title {
+  font-size: 14px;
+  line-height: 24px;
+  color: #333;
+  height: 48px;
+  font-weight: 400;
+  overflow: hidden;
+}
+
+.price {
+  height: 45px;
+  font-size: 22px;
+  color: #ed145b;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 15px;
+}
+
+.float_right {
+  height: 100%;
+  width: 40px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: #444851;
 }
