--- a/sass/index.scss
+++ b/sass/index.scss
@@ -215,7 +215,7 @@ body {
 }
 
 .wrapBox {
-  width: 1920px;
+  width: 100%;
   height: 350px;
 
   position: relative;
@@ -312,4 +312,51 @@ body {
       bottom: 5px;
     }
   }
+}
+
+//商品展示层
+.goodsList {
+  margin-top: 20px;
+
+  ul li {
+
+    width: 329px;
+    height: 450px;
+    background-color: #fff;
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 20px;
+  }
+
+  img {
+    width: 329px;
+  }
+}
+
+.title {
+  font-size: 14px;
+  line-height: 24px;
+  color: #333;
+  height: 48px;
+  font-weight: 400;
+  overflow: hidden;
+
+}
+
+.price {
+  height: 45px;
+  font-size: 22px;
+  color: #ed145b;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 15px;
+
+}
+
+.float_right {
+  height: 100%;
+  width: 40px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: #444851;
 }
