--- a/sass/index.scss
+++ b/sass/index.scss
@@ -30,7 +30,7 @@ body {
 }
 
 .w {
-  width: 1180px;
+  width: 1090px;
   margin: auto;
 }
 
@@ -72,25 +72,32 @@ body {
   float: right;
 
   .myJum {
+
     position: relative;
     // overflow: hidden;
   }
 }
 
 .header_top_right_two {
+  text-align: center;
   position: absolute;
   width: 114px;
-  left: -18px;
+  left: -65px;
   height: 0;
   display: none;
   z-index: 999;
   background-color: rgb(255, 255, 255);
+
+  li {
+    margin: 2px 0;
+  }
 }
 
 .header_top_right .li1 {
   float: left;
   margin-right: 20px;
   display: inline;
+
 }
 
 //头2
@@ -301,6 +308,7 @@ body {
     position: relative;
 
     h3 {
+      width: 1190px;
       height: 26px;
     }
 
@@ -318,7 +326,7 @@ body {
 .goodsList {
   margin-top: 20px;
 
-  ul li {
+  .goodsList1 li {
 
     width: 329px;
     height: 450px;
@@ -330,6 +338,51 @@ body {
 
   img {
     width: 329px;
+  }
+
+
+}
+
+.listser {
+
+
+  .page {
+    line-height: 36px;
+    text-align: center;
+    overflow: hidden;
+    color: #38f;
+    padding: 5px;
+    user-select: none;
+    margin-left: 420px;
+    margin-top: 70px;
+  }
+
+  .page .prev,
+  .page .pageBox,
+  .page .next {
+    float: left;
+  }
+
+  .page .prev,
+  .page .next {
+    width: 88px;
+    border: 1px solid #e1e2e3;
+    background-color: red;
+    color: white;
+  }
+
+  .page .pageBox li {
+    width: 36px;
+    border: 1px solid red;
+    float: left;
+    margin: 0 5px;
+    color: black;
+  }
+
+  .page .pageBox .active {
+    color: white;
+    border-color: transparent;
+    background-color: red;
   }
 }
 
@@ -352,6 +405,7 @@ body {
 
 }
 
+//竖条导航栏
 .float_right {
   height: 100%;
   width: 40px;
@@ -359,4 +413,58 @@ body {
   right: 0;
   top: 0;
   background-color: #444851;
+
+  i {
+    font-size: 23px;
+    color: #d8d8d8;
+
+  }
+
+  .li1 {
+    margin-top: 200px;
+    padding-left: 9px;
+  }
+
+  .li2 {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 5px;
+
+    a {
+      font-size: 18px;
+      margin-left: 6px;
+
+    }
+
+  }
+
+  .li3 {
+    padding-left: 9px;
+    margin-bottom: 8px;
+  }
+
+  .li4 {
+    padding-left: 9px;
+    margin-bottom: 8px;
+  }
+
+  .li5 {
+    padding-left: 9px;
+    margin-bottom: 280px;
+  }
+
+  .li6 {
+    padding-left: 9px;
+    margin-bottom: 8px;
+  }
+
+  .li7 {
+    padding-left: 9px;
+    margin-bottom: 8px;
+  }
+
+  .li8 {
+    padding-left: 9px;
+    margin-bottom: 8px;
+  }
 }
