--- a/sass/index.scss
+++ b/sass/index.scss
@@ -72,7 +72,6 @@ body {
   float: right;
 
   .myJum {
-
     position: relative;
     // overflow: hidden;
   }
@@ -97,7 +96,6 @@ body {
   float: left;
   margin-right: 20px;
   display: inline;
-
 }
 
 //头2
@@ -327,7 +325,6 @@ body {
   margin-top: 20px;
 
   .goodsList1 li {
-
     width: 329px;
     height: 450px;
     background-color: #fff;
@@ -339,14 +336,13 @@ body {
   img {
     width: 329px;
   }
-
-
 }
 
-.listser {
-
-
+.pageChangeBox {
   .page {
+    width: 421px;
+    height: 37px;
+
     line-height: 36px;
     text-align: center;
     overflow: hidden;
@@ -393,7 +389,6 @@ body {
   height: 48px;
   font-weight: 400;
   overflow: hidden;
-
 }
 
 .price {
@@ -402,7 +397,6 @@ body {
   color: #ed145b;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 15px;
-
 }
 
 //竖条导航栏
@@ -417,7 +411,6 @@ body {
   i {
     font-size: 23px;
     color: #d8d8d8;
-
   }
 
   .li1 {
@@ -433,9 +426,7 @@ body {
     a {
       font-size: 18px;
       margin-left: 6px;
-
     }
-
   }
 
   .li3 {
