--- a/sass/index.scss
+++ b/sass/index.scss
@@ -60,6 +60,10 @@ body {
 
 .header_top_left {
   float: left;
+
+  .heads {
+    color: red;
+  }
 }
 
 .header_top_left li {
@@ -152,12 +156,13 @@ body {
   float: right;
   margin-top: 33px;
   z-index: 8;
+  background-color: #ffff;
 }
 
 .cart_box .cart_gif {
   float: left;
-  width: 28px;
-  height: 28px;
+  width: 30px;
+  height: 30px;
   padding: 0 9px 0 9px;
   border: solid 1px rgba(235, 228, 228, 0.836);
 }
@@ -170,7 +175,7 @@ body {
   overflow: hidden;
   float: left;
   padding-left: 6px;
-  background-color: #f8f8f8;
+  background-color: #ffff;
 }
 
 //导航栏
